--- a/index.html
+++ b/index.html
@@ -86,41 +86,52 @@
   }
 
   /* Tarjetas */
-  #card-container {
-    position: relative;
-    width: 92%;
-    max-width: 520px;
-    height: 58vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .card {
-    width: 100%;
-    height: 100%;
-    background: var(--card-bg);
-    backdrop-filter: blur(3px);
-    border-radius: 20px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px;
-    box-sizing: border-box;
-    border: 2px solid var(--accent-1);
-    will-change: transform;
-  }
-  .card img {
-    max-height: 85%;
-    max-width: 100%;
-    object-fit: cover;
-    border-radius: 14px;
-    box-shadow: 0 6px 16px rgba(0,0,0,0.12);
-    user-select: none;
-    -webkit-user-drag: none;
-  }
-  .card div { font-weight: 600; color: var(--ink); padding-top: 6px; }
+ #card-container {
+  position: relative;
+  width: 92%;
+  max-width: 520px;
+  height: 63.8vh; /* 10% más alto que antes */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Tarjeta */
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  overflow: hidden;
+  border: 2px solid var(--accent-1);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+  will-change: transform;
+}
+
+/* Imagen cubre todo */
+.card img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+  user-select: none;
+  -webkit-user-drag: none;
+}
+
+/* Pie en overlay */
+.card div {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(255, 255, 255, 0.85); /* blanco semitransparente */
+  color: var(--ink);
+  font-weight: 600;
+  font-size: 16px;
+  padding: 8px 12px;
+  text-align: center;
+  backdrop-filter: blur(4px); /* da un efecto de vidrio */
+}
 
   /* Botones */
   #buttons {
@@ -985,5 +996,6 @@ function initKanjiRain(){
 </script>
 </body>
 </html>
+
 
 
