--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   position: relative;
   width: 92%;
   max-width: 520px;
-  height: 63.8vh; /* 10% más alto que antes */
+  height: 720px; /* 10% más alto que antes */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -996,6 +996,7 @@ function initKanjiRain(){
 </script>
 </body>
 </html>
+
 
 
 
