--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   background: rgba(255, 255, 255, 0.85); /* blanco semitransparente */
   color: var(--ink);
   font-weight: 600;
-  font-size: 16px;
+  font-size: clamp(14px, 2vw, 16px); /* tamaño de texto adaptativo */
   padding: 8px 12px;
   text-align: center;
   backdrop-filter: blur(4px); /* da un efecto de vidrio */
@@ -995,6 +995,7 @@ function initKanjiRain(){
 </script>
 </body>
 </html>
+
 
 
 
