--- a/index.html
+++ b/index.html
@@ -351,10 +351,14 @@ strong {
       </ul>
     </div>
     <p>¿Quién eres? O no empezamos ò_ó</p>
-    <input type="text" id="username" placeholder="Tu nombre" />
-    <div style="margin-top:10px; display:flex; gap:8px; justify-content:center; flex-wrap:wrap;">
-      <button class="btn accept" id="btnNameNext">Siguiente</button>
-      <button class="btn stats-btn" onclick="showStats()">Ver estadísticas</button>
+<input type="text" id="username" placeholder="Tu nombre" />
+<div style="margin-top:10px; display:flex; gap:8px; justify-content:center; flex-wrap:wrap;">
+  <button class="btn btn-theme" id="btnNameNext">Siguiente</button>
+  <button class="btn stats-btn" onclick="showStats()">Ver estadísticas</button>
+</div>
+
+
+      
     </div>
 
   
@@ -1019,6 +1023,7 @@ function initKanjiRain(){
 </script>
 </body>
 </html>
+
 
 
 
