--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
     box-shadow: 0 8px 18px rgba(0,0,0,.12);
     color: white;
   }
+  #btnNameNext,
+.stats-btn {
+  background: linear-gradient(180deg, var(--accent-1) 0%, var(--accent-2) 100%);
+  color: #fff;
+}
   .accept { background: linear-gradient(180deg, var(--yes) 0%, #5fb5ef 100%); }
   .meh    { background: linear-gradient(180deg, var(--meh) 0%, #7343d8 100%); }
   .reject { background: linear-gradient(180deg, var(--no) 0%, #ff5f93 100%); }
@@ -1023,6 +1028,7 @@ function initKanjiRain(){
 </script>
 </body>
 </html>
+
 
 
 
